--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "massive": "^5.7.1",
+    "moment": "^2.23.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
